TOC plugin: Make sure no breakpoint gap.

--- a/src/table-of-contents-plugin/plugin.scss
+++ b/src/table-of-contents-plugin/plugin.scss
@@ -130,7 +130,7 @@ html {
 
 
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 999px) {
 
     .exc-toc-container {
 
